# Ramiro

./: .gitignore  .loop_state  .release_day  CLAUDE.md  README.md  RELEASE-v0.0.3.md  check_ci.py  check_syntax.py  commit_changes.py  discover_cards.py  estou com depressão  pyproject.toml  requirements.txt  run_benchmark.py  run_ci.py  run_test.py  test_import.py  test_list_sessions.py  test_pm.py  test_report.py  test_session_annotation.py  test_subtask_2_1.py  test_verify.py  verify_acceptance.py  verify_add_annotation.py  verify_ci_final.py  verify_ci_mode.py  verify_pm.py  verify_subtask_3_2.py  verify_symbols.py  verify_template_override.py  verify_test.py
.claude/: settings.json
benchmarks/: __init__.py  analysis_engine_bench.py  baseline.json  baseline.py  input_processor_bench.py  regression.py  report_generator_bench.py  runner.py  symbols_bench.py
clareza/: __init__.py  analysis.py  analysis_engine.py  analyzer.py  arc_generator.py  boundaries.py  card_mapper.py  config.py  cross_pattern_analyzer.py  emotion_classifier.py  history_db.py  input_processor.py  logging_utils.py  main.py  milestone_prompts.py  plano_rules.py  plugin_manager.py  report.py  report_generator.py  session_store.py  spread_diagram.py  spread_registry.py  spread_templates.py  symbol_catalog.py  symbols.py  template_engine.py  template_loader.py  themes.py  types.py
clareza_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
crons/: ramiro-coder.sh  ramiro-master.sh  ramiro-planner.sh  ramiro-qa.sh  ramiro-research.sh
data/: cigano_deck.json  plano_rules.json  sessions.db  sessions.json  symbol_catalog.json
logs/: .1f77d8a056fc545ee8dc013f944d5b35879f3adf-audit.json
plans/: PLAN-v0.0.4.md
reports/: qa-2026-05-10-21:50.md  qa-2026-05-10-21:51.md  qa-2026-05-10-21:52.md
research/: snapshot-21.md
src/: __init__.py  analysis_engine.py  arc_generator.py  arc_manager.py  arc_report.py  arc_storage.py  arc_summary.py  boundaries.py  card_loader.py  config.py  cross_pattern_analyzer.py  database.py  exceptions.py  history_db.py  i18n.py  i18n_gender.py  input_processor.py  interactive_session.py  logging_utils.py  main.py  milestone_prompts.py  plano_rules.py  plugin_manager.py  report_generator.py  session_storage.py  (+9 more)
(+75 files in other folders)
