[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clareza"
version = "0.1.0"
description = "Ferramenta CLI para Baralho Cigano"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Clareza Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
]

[project.scripts]
clareza = "clareza.cli:cli"

[project.urls]
Homepage = "https://github.com/clareza/clareza"

[tool.setuptools.packages.find]
where = ["src"]
